--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -22,6 +22,30 @@
   background-color: #8abae0;
 }
 
+.color-0- .colorText {
+  color: #e6e6e6;
+}
+
+.color-0- .bg {
+  background-color: #e6e6e6;
+}
+
+.color-1- .colorText {
+  color: #f0f0f0;
+}
+
+.color-1- .bg {
+  background-color: #f0f0f0;
+}
+
+.color-2- .colorText {
+  color: #8abae0;
+}
+
+.color-2- .bg {
+  background-color: #8abae0;
+}
+
 .buttons .btn:hover {
   background-color: #cacaca;
 }
@@ -38,6 +62,8 @@ span:hover {
 
 .display {
   height: 100px;
-}
+}/*# sourceMappingURL=main.css.map */
 
-/*# sourceMappingURL=main.css.map */
+.display{
+  font-size: 40px;
+}
